--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,6 +7,6 @@
 
 <body>
 	<h1>Hello! I'm a UX/UI Designer!</h1>
-	<p>This is Felipe's portfolio website</p>
+	<p>This is my portfolio website</p>
 </body>
 </html>
