Updates to content
Changed title and body content. Changed color to background and text.

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Felipe Escobar Pinedo</title>
+	<title>Felipe's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-	<h1>Hello! I'm a UX/UI Designer!</h1>
-	<p>This is my portfolio website</p>
+	<h1>Hello there!</h1>
+	<p>My name is Felipe Escobar Pinedo, and I'm a UX/UI Designer from Colombia. Welcome to my portfolio website!</p>
 </body>
 </html>
