Update to body on colors
Added links to Twitter and Instagram accounts. Changed colors to hex codes

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Felipe's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -7,6 +8,10 @@
 
 <body>
 	<h1>Hello there!</h1>
+
 	<p>My name is Felipe Escobar Pinedo, and I'm a UX/UI Designer from Colombia. Welcome to my portfolio website!</p>
+
+	<p>Follow me on <a href="https://twitter.com/felipe_escobarp">Twitter</a> or <a href="https://www.instagram.com/felipe_escobarp/">Instagram</a></p>
 </body>
+
 </html>
