Added image alt and titles

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -31,21 +31,21 @@
 		<h3>Skillset</h3>
 
 		<div>
-			<img src="images/oval.svg">
+			<img src="images/oval.svg" alt="Icon for UX Design" title="UX Design">
 			<h5>Sample text</h5>
 			<h4>UX Design</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
 		</div>
 
 		<div>
-			<img src="images/oval.svg">
+			<img src="images/oval.svg" alt="Icon for UI Design" title="UI Design">
 			<h5>Sample text</h5>
 			<h4>UI Design</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
 		</div>
 
 		<div>
-			<img src="images/oval.svg">
+			<img src="images/oval.svg" alt="Icon for 3D object" title="3D Modeling">
 			<h5>Sample text</h5>
 			<h4>3D Modeling</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
