Changes alts in images
added alt to images and deleted alts for icons

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -17,13 +17,13 @@
 	</header>
 	
 	<section>
-		<img src="images/ui_design.jpg">
+		<img src="images/ui_design.jpg" alt="">
 		<h4>Felipe Escobar Pinedo</h4>
 		<h1>I design beautiful products<br>for human beings.</h1>
 		<div class="CTA">
 			<a href="#">My work</a>
 		</div>	
-		<img src="images/down_arrow.svg">
+		<img src="images/down_arrow.svg" alt="">
 	</section>
 
 	<section>
@@ -41,21 +41,21 @@
 		<h2>Skillset</h2>
 
 		<div class="cards">
-			<img src="images/placeholder_oval.svg" alt="Icon for UX Design" title="UX Design">
+			<img src="images/placeholder_oval.svg" alt="">
 			<h4>Sample text</h4>
 			<h3>UX Design</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
 		</div>
 
 		<div class="cards">
-			<img src="images/placeholder_oval.svg" alt="Icon for UI Design" title="UI Design">
+			<img src="images/placeholder_oval.svg" alt="">
 			<h4>Sample text</h4>
 			<h3>UI Design</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
 		</div>
 
 		<div class="cards">
-			<img src="images/placeholder_oval.svg" alt="Icon for 3D object" title="3D Modeling">
+			<img src="images/placeholder_oval.svg" alt="">
 			<h4>Sample text</h4>
 			<h3>3D Modeling</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet luctus eros.</p>
